# Hackathon2-todo

./: .gitignore  CLAUDE.md  DEMO.md  README.md  docker-compose.yml  pyproject.toml  railway.toml  run_tests.bat
.claude/: settings.local.json
.specify/memory/: constitution.md
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/agents/: __init__.py  agent.py  base.py  prompts.py  tools.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_due_date.py  003_add_app_users.py
backend/src/: app.py  cli.py  database.py  db_models.py  events.py  main.py
backend/src/auth/: dependencies.py
backend/src/routes/: auth.py  chat.py  tasks.py
backend/tests/: test_agent.py  test_api.py  test_chat.py  test_cli.py  test_events.py  test_models.py  test_task_manager.py
dapr/components/: kafka-pubsub.yaml
frontend/: .env.example  Dockerfile  middleware.ts  package-lock.json  proxy.ts
frontend/.data/: users.json
frontend/app/: actions.ts  globals.css  layout.tsx  page.tsx
frontend/components/: ChatPanel.tsx  ChatWidget.tsx  Header.tsx  TasksView.tsx
frontend/lib/: api.ts  auth.ts  i18n.tsx  user-store.ts
helm/todo-app/: Chart.yaml  values-doks.yaml  values.yaml
k8s/: backend-deployment.yaml  backend-service.yaml  frontend-deployment.yaml  frontend-service.yaml  ingress.yaml  kafka.yaml
scripts/: deploy-doks.sh  deploy-minikube.sh
specs/: architecture.md  constitution.md  overview.md  phase2-demo-script.md  phase2-migration-plan.md  phase2-verification-checklist.md  phase5-dapr-kafka.md
src/: cli.py  main.py  models.py  task_manager.py  task_service.py
tests/: conftest.py
(+86 files in other folders)
