[project]
name = "todo-console"
version = "0.1.0"
description = "Phase I: In-Memory Python Console Todo App - Hackathon II"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
todo = "src.main:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
